[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/Character/Character.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/Ship/Ship.gd" type="Script" id=2]
[ext_resource path="res://Assets/Ship/ship.png" type="Texture" id=3]
[ext_resource path="res://Assets/Ship/LaserCanon Ship.tscn" type="PackedScene" id=4]

[node name="Ship" groups=[
"Player",
] instance=ExtResource( 1 )]

position = Vector2( 90, 280 )
script = ExtResource( 2 )
hp_full = 4

[node name="Sprite" parent="."]

texture = ExtResource( 3 )

[node name="CollisionPolygon2D" parent="."]

polygon = PoolVector2Array( 15, 2, 15, 13, -15, 13, -15, 2, -8, -5, -3, -15, 3, -15, 8, -5 )

[node name="LaserCanonLeft" parent="." instance=ExtResource( 4 )]

position = Vector2( -13, -10 )

[node name="LaserCanonRight" parent="." instance=ExtResource( 4 )]

position = Vector2( 13, -10 )

[node name="CanonTimer" type="Timer" parent="."]

process_mode = 1
wait_time = 10.0
one_shot = false
autostart = false

[node name="InvulnerabilityTimer" type="Timer" parent="."]

process_mode = 1
wait_time = 1.5
one_shot = true
autostart = false

[connection signal="timeout" from="CanonTimer" to="." method="disable_double_laser"]

[connection signal="timeout" from="InvulnerabilityTimer" to="." method="disable_invulnerability"]


